@@ -52,6 +52,7 @@
   * Add [[https://devenv.sh/][devenv]] and [[https://jj-vcs.github.io/jj/latest/][jj]] directories to the list of ignored directories (~lsp-file-watch-ignored-directories~)
   * Fix bug where qmlls failed to load due to qml not being in ~lsp-language-id-configuration~
   * Fix default value for ~lsp-rust-analyzer-cargo-cfgs~
+  * Add ~lsp-ruby-lsp-server-command~ variable to allow overriding of the path to ~ruby-lsp~ executable
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
